--- a/src/main/webapp/components/playlists/playlists-menu-button/playlists-menu-button.html
+++ b/src/main/webapp/components/playlists/playlists-menu-button/playlists-menu-button.html
@@ -16,12 +16,13 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
-<ol class="breadcrumb">
-    <li>
-        <em-playlists-menu-button (onCreate)="menuOnCreate()"></em-playlists-menu-button>
-        <a [hidden]="isMultiActive()" (click)="multiClicked()" href="javascript:void(0)">Playlists</a>
-        <span [hidden]="isSingleActive()">Playlists</span>
-    </li>
-    
-    <li *ngIf="isSingleActive()">{{getPlaylistName()}}</li>
-</ol>
+<div class="btn-group" dropdown>
+    <button type="button" class="btn btn-xs btn-default" dropdownToggle>
+        <span class="fa fa-bars"></span>
+    </button>
+    <ul dropdownMenu>
+        <li><a class="dropdown-item" href="javascript:void(0)" (click)="createClicked()" title="create library">
+            <i class="fa fa-plus"></i> create
+        </a></li>
+    </ul>
+</div>
