--- a/src/main/webapp/components/queue/queue.html
+++ b/src/main/webapp/components/queue/queue.html
@@ -17,14 +17,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <em-loading-overlay [overlayVisible]="loading">
-    <div>
-        <h2>Queue</h2>
-    </div>
-    <div class="em-top-table-controls-container">
-        <button type="button" class="btn btn-xs btn-default" (click)="clear()" title="clear queue">
-            <i class="fa fa-ban"></i> clear
-        </button>
-    </div>
+    <div><h2>
+        <em-queue-menu-button></em-queue-menu-button> Queue
+    </h2></div>
+    
     <table class="table table-striped table-condensed">
         <tr>
             <th>pI</th>
