--- a/src/main/webapp/components/playlists/playlists.html
+++ b/src/main/webapp/components/playlists/playlists.html
@@ -21,12 +21,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </em-playlist-breadcrumb>
     
     <div [hidden]="playlist">
-        <div *ngFor="let p of playlists.playlists | sort : 'name'" class="em-playlist-row">
-            <button type="button" class="btn btn-xs btn-default" (click)="deletePlaylist(p)" title="delete playlist">
-                <i class="fa fa-times"></i>
-            </button>
-            <a (click)="playlistClicked(p)" href="javascript:void(0)">{{p.name}}</a>
-        </div>
+        <ul class="list-group em-playlists-list">
+            <li class="list-group-item" *ngFor="let p of playlists.playlists | sort : 'name'">
+                <button type="button" class="btn btn-xs btn-default" (click)="deletePlaylist(p)" title="delete playlist">
+                    <i class="fa fa-times"></i>
+                </button>
+                <a (click)="playlistClicked(p)" href="javascript:void(0)">{{p.name}}</a>
+            </li>
+        </ul>
     </div>
     
     <div [hidden]="!playlist">
