--- a/src/main/webapp/components/playlists/playlist/playlist.html
+++ b/src/main/webapp/components/playlists/playlist/playlist.html
@@ -16,6 +16,8 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
+"{{playlist}}"
+
 <table class="table table-striped table-condensed table-hover">
     <tr>
         <th align="right">Playlist<br/>Element ID</th>
@@ -29,6 +31,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <th align="right">Sample Count</th>
         <th align="left">
             <!-- JOE todo add to queue -->
+            <!-- JOE todo delete playlist-->
         </th>
     </tr>
     <!-- JOE todo: [ngClass]="{info: isPlaying(s), 'library-songs-enqueued': isInQueue(s)}" -->
